[gd_scene load_steps=4 format=3 uid="uid://d1t0cyu2xw4e2"]

[ext_resource type="Script" uid="uid://ca0k2uah4oflu" path="res://components/DataInputs/DataInputUIPanel/DataInputUIPanel.gd" id="1_oubib"]
[ext_resource type="StyleBox" uid="uid://cftl4b5dnt57b" path="res://assets/styles/ResolveBoxBGLess.tres" id="2_53rpp"]
[ext_resource type="Texture2D" uid="uid://c6xnsmttojanx" path="res://assets/icons/Settings.svg" id="3_eyg20"]

[node name="DataInputUIPanel" type="PanelContainer"]
custom_minimum_size = Vector2(0, 50)
offset_right = 86.5625
offset_bottom = 49.0
script = ExtResource("1_oubib")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBox"]
visible = false
layout_mode = 2

[node name="Button" type="Button" parent="HBox"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 10

[node name="Outline" type="Panel" parent="HBox/Button"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = ExtResource("2_53rpp")

[node name="Settings" type="Button" parent="HBox"]
layout_mode = 2
icon = ExtResource("3_eyg20")

[connection signal="pressed" from="HBox/Button" to="." method="_on_button_pressed"]
[connection signal="toggled" from="HBox/Button" to="." method="_on_button_toggled"]
[connection signal="pressed" from="HBox/Settings" to="." method="_on_settings_pressed"]
